deploy/kubernetes/ingress-http.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sock-http
  namespace: sock-shop
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: sock-shop.1f19f805a7e44088a901.eastus.aksapp.io
    http:
      paths:
      - backend:
          serviceName: front-end
          servicePort: 80
        path: /
